{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 106,
  "lineage": "858e7300-2c0b-4763-643c-d0713f157de8",
  "resources": [
    {
      "module": "module.percona-server",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:303467602807:subnet/subnet-01e551bf5e4eb6b57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "available_ip_address_count": 249,
            "cidr_block": "10.1.100.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e551bf5e4eb6b57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "303467602807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "state": "available",
            "tags": {
              "Name": "service-network: private 10.1.100.0/24",
              "created_by_fixture": "infrahouse/pytest-infrahouse/service-network",
              "created_by_module": "infrahouse/service-network/aws",
              "created_by_test": "terraform-aws-percona-server",
              "environment": "development",
              "management": "true",
              "service": "service-network"
            },
            "vpc_id": "vpc-0d92c782716242ac9"
          }
        }
      ]
    },
    {
      "module": "module.percona-server",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:303467602807:vpc/vpc-0d92c782716242ac9",
            "cidr_block": "10.1.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-03babd25f4ed69c24",
                "cidr_block": "10.1.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0399557d793bdc270",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d92c782716242ac9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01bb12ffc6af32401",
            "owner_id": "303467602807",
            "region": "us-west-1",
            "tags": {
              "Name": "VPC for service-network (development) 10.1.0.0/16",
              "created_by_fixture": "infrahouse/pytest-infrahouse/service-network",
              "created_by_module": "infrahouse/service-network/aws",
              "created_by_test": "terraform-aws-percona-server",
              "environment": "development",
              "management": "true",
              "module_version": "3.2.2",
              "service": "service-network"
            }
          }
        }
      ]
    },
    {
      "module": "module.percona-server",
      "mode": "managed",
      "type": "aws_lb",
      "name": "percona",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:303467602807:loadbalancer/net/prc-20260118145555588300000001/67b0864df89c3a83",
            "arn_suffix": "net/prc-20260118145555588300000001/67b0864df89c3a83",
            "dns_name": "prc-20260118145555588300000001-67b0864df89c3a83.elb.us-west-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:303467602807:loadbalancer/net/prc-20260118145555588300000001/67b0864df89c3a83",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "prc-20260118145555588300000001",
            "name_prefix": "prc-",
            "region": "us-west-1",
            "secondary_ips_auto_assigned_per_subnet": 0,
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01e551bf5e4eb6b57"
              },
              {
                "subnet_id": "subnet-0ebe8a46542652766"
              }
            ],
            "subnets": [
              "subnet-01e551bf5e4eb6b57",
              "subnet-0ebe8a46542652766"
            ],
            "tags": {
              "Name": "percona-test-percona-nlb",
              "cluster_id": "test-percona",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "tags_all": {
              "Name": "percona-test-percona-nlb",
              "cluster_id": "test-percona",
              "created_by": "infrahouse/terraform-aws-percona-server",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "vpc_id": "vpc-0d92c782716242ac9",
            "zone_id": "Z24FKFUX50B4VW"
          }
        }
      ]
    },
    {
      "module": "module.percona-server",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "read",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:303467602807:listener/net/prc-20260118145555588300000001/67b0864df89c3a83/8226c3f50da4164b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:303467602807:targetgroup/read-20260118145555588400000002/3b701c41644cb3b9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:303467602807:listener/net/prc-20260118145555588300000001/67b0864df89c3a83/8226c3f50da4164b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:303467602807:loadbalancer/net/prc-20260118145555588300000001/67b0864df89c3a83",
            "mutual_authentication": [],
            "port": 3307,
            "protocol": "TCP",
            "region": "us-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {
              "Name": "percona-test-percona-read-listener",
              "cluster_id": "test-percona",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "tags_all": {
              "Name": "percona-test-percona-read-listener",
              "cluster_id": "test-percona",
              "created_by": "infrahouse/terraform-aws-percona-server",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.percona-server.aws_lb.percona",
            "module.percona-server.aws_lb_target_group.read",
            "module.percona-server.data.aws_subnet.selected",
            "module.percona-server.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.percona-server",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "write",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:303467602807:listener/net/prc-20260118145555588300000001/67b0864df89c3a83/e1864052dc6e4233",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:303467602807:targetgroup/write-20260118145555588400000003/4780b2ed1906e7d2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:303467602807:listener/net/prc-20260118145555588300000001/67b0864df89c3a83/e1864052dc6e4233",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:303467602807:loadbalancer/net/prc-20260118145555588300000001/67b0864df89c3a83",
            "mutual_authentication": [],
            "port": 3306,
            "protocol": "TCP",
            "region": "us-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {
              "Name": "percona-test-percona-write-listener",
              "cluster_id": "test-percona",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "tags_all": {
              "Name": "percona-test-percona-write-listener",
              "cluster_id": "test-percona",
              "created_by": "infrahouse/terraform-aws-percona-server",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.percona-server.aws_lb.percona",
            "module.percona-server.aws_lb_target_group.write",
            "module.percona-server.data.aws_subnet.selected",
            "module.percona-server.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.percona-server",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "read",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:303467602807:targetgroup/read-20260118145555588400000002/3b701c41644cb3b9",
            "arn_suffix": "targetgroup/read-20260118145555588400000002/3b701c41644cb3b9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "port": "3306",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:303467602807:targetgroup/read-20260118145555588400000002/3b701c41644cb3b9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-1:303467602807:loadbalancer/net/prc-20260118145555588300000001/67b0864df89c3a83"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "read-20260118145555588400000002",
            "name_prefix": "read-",
            "port": 3306,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "us-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "percona-test-percona-read-tg",
              "cluster_id": "test-percona",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development",
              "role": "read"
            },
            "tags_all": {
              "Name": "percona-test-percona-read-tg",
              "cluster_id": "test-percona",
              "created_by": "infrahouse/terraform-aws-percona-server",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development",
              "role": "read"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d92c782716242ac9"
          },
          "dependencies": [
            "module.percona-server.data.aws_subnet.selected",
            "module.percona-server.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.percona-server",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "write",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:303467602807:targetgroup/write-20260118145555588400000003/4780b2ed1906e7d2",
            "arn_suffix": "targetgroup/write-20260118145555588400000003/4780b2ed1906e7d2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "port": "3306",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:303467602807:targetgroup/write-20260118145555588400000003/4780b2ed1906e7d2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-1:303467602807:loadbalancer/net/prc-20260118145555588300000001/67b0864df89c3a83"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "write-20260118145555588400000003",
            "name_prefix": "write-",
            "port": 3306,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "us-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "percona-test-percona-write-tg",
              "cluster_id": "test-percona",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development",
              "role": "write"
            },
            "tags_all": {
              "Name": "percona-test-percona-write-tg",
              "cluster_id": "test-percona",
              "created_by": "infrahouse/terraform-aws-percona-server",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development",
              "role": "write"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d92c782716242ac9"
          },
          "dependencies": [
            "module.percona-server.data.aws_subnet.selected",
            "module.percona-server.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.percona-server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "percona",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:303467602807:security-group/sg-02a802ce4bfdb610c",
            "description": "Security group for Percona Server cluster test-percona",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a802ce4bfdb610c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "ICMP from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "MySQL traffic from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MySQL traffic between cluster nodes",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Orchestrator HTTP traffic",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Orchestrator Raft consensus traffic",
                "from_port": 10008,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10008
              }
            ],
            "name": "percona-test-percona-20260118145555589800000005",
            "name_prefix": "percona-test-percona-",
            "owner_id": "303467602807",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "percona-test-percona-sg",
              "cluster_id": "test-percona",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "tags_all": {
              "Name": "percona-test-percona-sg",
              "cluster_id": "test-percona",
              "created_by": "infrahouse/terraform-aws-percona-server",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d92c782716242ac9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.percona-server.data.aws_subnet.selected",
            "module.percona-server.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.percona-server",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:303467602807:security-group-rule/sgr-0f3d3effcc3710d27",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0f3d3effcc3710d27",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-1",
            "security_group_id": "sg-02a802ce4bfdb610c",
            "security_group_rule_id": "sgr-0f3d3effcc3710d27",
            "tags": {
              "cluster_id": "test-percona",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "tags_all": {
              "cluster_id": "test-percona",
              "created_by": "infrahouse/terraform-aws-percona-server",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.percona-server.aws_security_group.percona",
            "module.percona-server.data.aws_subnet.selected",
            "module.percona-server.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.percona-server",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:303467602807:security-group-rule/sgr-0d432817bdf17842c",
            "cidr_ipv4": "10.1.0.0/16",
            "cidr_ipv6": null,
            "description": "ICMP from VPC",
            "from_port": -1,
            "id": "sgr-0d432817bdf17842c",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-1",
            "security_group_id": "sg-02a802ce4bfdb610c",
            "security_group_rule_id": "sgr-0d432817bdf17842c",
            "tags": {
              "cluster_id": "test-percona",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "tags_all": {
              "cluster_id": "test-percona",
              "created_by": "infrahouse/terraform-aws-percona-server",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.percona-server.aws_security_group.percona",
            "module.percona-server.data.aws_subnet.selected",
            "module.percona-server.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.percona-server",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "mysql_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:303467602807:security-group-rule/sgr-0d5c10e2bb7a648f8",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "MySQL traffic between cluster nodes",
            "from_port": 3306,
            "id": "sgr-0d5c10e2bb7a648f8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-02a802ce4bfdb610c",
            "region": "us-west-1",
            "security_group_id": "sg-02a802ce4bfdb610c",
            "security_group_rule_id": "sgr-0d5c10e2bb7a648f8",
            "tags": {
              "cluster_id": "test-percona",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "tags_all": {
              "cluster_id": "test-percona",
              "created_by": "infrahouse/terraform-aws-percona-server",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.percona-server.aws_security_group.percona",
            "module.percona-server.data.aws_subnet.selected",
            "module.percona-server.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.percona-server",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "mysql_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:303467602807:security-group-rule/sgr-0d8490b10262455fe",
            "cidr_ipv4": "10.1.0.0/16",
            "cidr_ipv6": null,
            "description": "MySQL traffic from VPC (default when no clients specified)",
            "from_port": 3306,
            "id": "sgr-0d8490b10262455fe",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-1",
            "security_group_id": "sg-02a802ce4bfdb610c",
            "security_group_rule_id": "sgr-0d8490b10262455fe",
            "tags": {
              "cluster_id": "test-percona",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "tags_all": {
              "cluster_id": "test-percona",
              "created_by": "infrahouse/terraform-aws-percona-server",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.percona-server.aws_security_group.percona",
            "module.percona-server.data.aws_subnet.selected",
            "module.percona-server.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.percona-server",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "orchestrator_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:303467602807:security-group-rule/sgr-0cd140459a4a93622",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Orchestrator HTTP traffic",
            "from_port": 3000,
            "id": "sgr-0cd140459a4a93622",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-02a802ce4bfdb610c",
            "region": "us-west-1",
            "security_group_id": "sg-02a802ce4bfdb610c",
            "security_group_rule_id": "sgr-0cd140459a4a93622",
            "tags": {
              "cluster_id": "test-percona",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "tags_all": {
              "cluster_id": "test-percona",
              "created_by": "infrahouse/terraform-aws-percona-server",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.percona-server.aws_security_group.percona",
            "module.percona-server.data.aws_subnet.selected",
            "module.percona-server.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.percona-server",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "orchestrator_raft",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:303467602807:security-group-rule/sgr-0941d418a7dd56d1b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Orchestrator Raft consensus traffic",
            "from_port": 10008,
            "id": "sgr-0941d418a7dd56d1b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-02a802ce4bfdb610c",
            "region": "us-west-1",
            "security_group_id": "sg-02a802ce4bfdb610c",
            "security_group_rule_id": "sgr-0941d418a7dd56d1b",
            "tags": {
              "cluster_id": "test-percona",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "tags_all": {
              "cluster_id": "test-percona",
              "created_by": "infrahouse/terraform-aws-percona-server",
              "created_by_module": "infrahouse/percona-server/aws",
              "environment": "development"
            },
            "to_port": 10008
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.percona-server.aws_security_group.percona",
            "module.percona-server.data.aws_subnet.selected",
            "module.percona-server.data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}